<resources>
    <string name="app_name">聚了么</string>
    <string name="action_settings">Settings</string>
    <string name="search">搜索</string>
    <string name="no_search_result">搜索结果为空</string>
    <string name="userNo">请输入挚亲号/手机号</string>
    <string name="password">请输入密码</string>
    <string name="action_login_in">登&#160;&#160;录</string>
    <string name="action_regist">注册用户</string>
    <string name="user_no_null">账号不能为空</string>
    <string name="password_no_null">密码不能为空</string>
    <string name="remember_pwd">记住密码</string>
    <string name="auto_login">自动登录</string>
    <string name="login_progress_signing_in">正在登录&#8230;</string>
    <string name="login_progress_loading_in">正在加载&#8230;</string>
    <string name="error_login_nouser">用户不存在</string>
    <string name="error_login_psw">密码输入错误</string>
    <string name="nickName">昵称</string>
    <string name="foreget_psw">忘记密码？</string>
    <string name="btn_register">注册</string>
    <string name="tv_password">密码</string>
    <string name="et_password">填写密码</string>
    <string name="et_usertel">你的手机号码</string>
    <string name="tv_usernick">昵称</string>
    <string name="album">相册</string>
    <string name="yzm">验证码</string>
    <string name="btn_register_next">下一步</string>
    <string name="et_yzm">请输入验证码</string>
    <string name="login_mobile_confirm">将发送验证码短信到这个号码：</string>
    <string name="login_vercode_null">验证码不能为空</string>
    <string name="login_vercode_error">请输入正确的验证码</string>
    <string name="register_success">注册成功</string>
    <string name="phone_no_null">手机不能为空</string>
    <string name="regist_phone_error">请输入正确的手机号码</string>
    <string name="regist_pwd_length_error">密码长度不能少于6个字符</string>
    <string name="regist_user_error">用户注册失败</string>
    <string name="system_service_error">系统服务加载失败</string>
    <string name="login_failed">登陆失败,请重试</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_group">GroupActivity</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="group_chat">群聊</string>
    <string name="group_party">聚会</string>
    <string name="my_party">我发起的聚会</string>
    <string name="stock_party">归档的聚会</string>
    <string name="party_plan">聚会方案</string>
    <string name="group_invite">邀请</string>
    <string name="me">我</string>
    <string name="basic_info">基本信息</string>
    <string name="confirm">确定</string>
    <string name="negative">取消</string>
    <string name="delete">删除</string>
    <string name="common_loading">正在加载...</string>
    <string name="no_network">网络连接不可用，请检查你的网络设置</string>
    <string name="operation_success">操作成功</string>
    <string name="operation_fail">操作失败</string>
    <string name="empty_data">空空无也！</string>
    <string name="quit">退出</string>
    <string name="help">帮助</string>
    <string name="string_help_text">当前应用缺少必要权限。\n请点击“设置”->“权限”->打开所需权限\n最后点击两次后退按钮，即可返回。</string>
    <string name="no_msg">暂时没有新消息</string>
    <string name="button_pushtotalk">按住说话</string>
    <string name="button_send">发送</string>
    <string name="attach_smile">表情</string>
    <string name="attach_picture">图片</string>
    <string name="attach_take_pic">拍照</string>
    <string name="attach_location">位置</string>
    <string name="attach_file">文件</string>
    <string name="attach_voice_call">语音电话</string>
    <string name="attach_video_call">视频通话</string>
    <string name="move_up_to_cancel">手指上滑，取消发送</string>
    <string name="tip_for_voice_forward">按住 说话</string>
    <string name="release_to_send_voice">松开 结束</string>
    <string name="photo_pop_pick_photo">从相册选择</string>
    <string name="photo_pop_take_photo">拍照</string>
    <string name="no_gallery">没有找到相册</string>
    <string name="no_sdcard">没有SD卡</string>
    <string name="take_camera_btn_text">拍照</string>
    <string name="take_photo_btn_text">照片</string>
    <string name="take_small_video_text">小视频</string>
    <string name="not_found_album">没有找到可用的相册！</string>
    <string name="loading">加载中&#8230;</string>
    <string name="refresh_over">刷新完成</string>
    <string name="refresh">刷新</string>
    <string name="default_emo">默认表情</string>
    <string name="yaya_emo">牙牙表情</string>
    <string name="no_chat">暂无会话</string>
    <string name="no_group">暂无群组</string>
    <string name="chat_subject">群聊名称</string>
    <string name="chat_description">群聊描述</string>
    <string name="chat_create">创建群聊</string>
    <string name="chat_create_error">创建群聊失败</string>
    <string name="chat_create_loading">群聊创建中...</string>
    <string name="chat_name_null">群聊名称不能为空</string>
    <string name="chat_name_over_length">群聊名称超过指定长度</string>
    <string name="chat_is_null">群聊不存在</string>
    <string name="cancel_top_message">取消置顶</string>
    <string name="top_message">置顶聊天</string>
    <string name="cancel_forbid_group_message">取消免打扰</string>
    <string name="forbid_group_message">免打扰</string>
    <string name="cancel_short_top_message">取消置顶</string>
    <string name="check_profile">查看资料</string>
    <string name="start_session">开始聊天</string>
    <string name="fixed_group_or_temp_group">群或讨论组</string>
    <string name="contact">联系人</string>
    <string name="invite_code">邀请码</string>
    <string name="invite_code_loading">邀请码加群中...</string>
    <string name="invite_code_null">邀请码不能为空</string>
    <string name="invite_group_no_pass">加入群组未通过</string>
    <string name="error_group_info">不合法群组选择信息</string>
    <string name="login_error_unexpected">登陆失败, 请检查你的网络或稍后重试</string>
    <string name="login_error_general_failed">帐号或密码错误，请重新填写</string>
    <string name="disconnect_kickout">账号在其他端登陆，点击重登</string>
    <string name="no_network_toast">网络连接不可用</string>
    <string name="connect_msg_server_failed">无法连接到消息服务器, 请检查你的网络或稍后重试</string>
    <string name="msg_cnt_unit">条</string>
    <string name="message_receive_loading">收取中...</string>
    <string name="call_mode">听筒模式</string>
    <string name="speaker_mode">扬声器模式</string>
    <string name="copy">复制</string>
    <string name="resend">重发</string>
    <string name="send_message">发表</string>
    <string name="title_activity_pick_photo">PickPhotoActivity</string>
    <string name="send">发送</string>
    <string name="preview">预览</string>
    <string name="cancel">取消</string>
    <string name="close">关闭</string>
    <string name="title_activity_preview">PreviewActivity</string>
    <string name="request_login_faild">请求登陆消息服务器失败</string>
    <string name="sdcard_unavaluable">请检查存储卡是否可用</string>
    <string name="disconnected">连接已断开</string>
    <string name="requesting">正在获取信息...</string>
    <string name="connecting">正在连接...</string>
    <string name="chat">聊天</string>
    <string name="contact_all">全部</string>
    <string name="contact_department">部门</string>
    <string name="top_left_back">返回</string>
    <string name="group_name_tip">群聊名称</string>
    <string name="chat_failed_search">未搜索到匹配的结果</string>
    <string name="save">保存</string>
    <string name="message_null">不能发送空内容哦！</string>
    <string name="message_image_desc">Message Image</string>
    <string name="history_divider_text">以上是历史信息</string>
    <string name="message_send_failed">请检查网络</string>
    <string name="im_service_disconnected">无法连接到后台消息服务</string>
    <string name="image_path_unavaluable">图片路径无效</string>
    <string name="unavailable_image_file">该文件已损坏</string>
    <string name="need_choose_images">请选择图片～</string>
    <string name="hint">提示</string>
    <string name="record_camera_exit_dialog_message">是否放弃这段视频？</string>
    <string name="record_camera_cancel_dialog_yes">确定</string>
    <string name="record_camera_cancel_dialog_no">取消</string>
    <string name="record_camera_progress_message">正在转码…</string>
    <string name="record_video_transcoding_faild">视频转码失败</string>
    <string name="no_disturb">接收但屏蔽通知</string>
    <string name="chat_detail">聊天信息</string>
    <string name="group_qr_code">群二维码</string>
    <string name="group_invite_code">群邀请码</string>
    <string name="quit_group">退出该群</string>
    <string name="quit_group_success">退出群组成功</string>
    <string name="transfer_group">转让群主</string>
    <string name="qr_desc_info">扫一扫上面的二维码图案，加群组微信</string>
    <string name="group_management_transfer">群主管理权转让</string>
    <string name="select_new_group_manager">选择新群主</string>
    <string name="page_user_detail">详细资料</string>
    <string name="title_fragment_user_detail_email">邮箱</string>
    <string name="save_image">保存图片到手机</string>
    <string name="search_original_image">查看图片</string>
    <string name="load_user_info_fail">加载用户信息失败</string>
    <string name="choose_contact">选择联系人</string>
    <string name="select_group_member_empty">请先选择群组成员</string>
    <string name="create_temp_group_dialog_title">讨论组名字</string>
    <string name="invite_code_send_success">邀请码已发出</string>
    <string name="invite_code_send_failed">邀请码发送失败</string>
    <string name="invite_user_send_success">加入群组成功</string>
    <string name="invite_user_send_failed">加入群组失败</string>
    <string name="delete_group_member_send_success">移除群组成功</string>
    <string name="delete_group_member_send_failed">移除群组失败</string>
    <string name="master_transfer_send_success">群主转让成功</string>
    <string name="master_transfer_send_failed">群主转让失败</string>
    <string name="exit_group_send_success">退出群组成功</string>
    <string name="exit_group_send_failed">退出群组失败</string>
    <string name="party_recruit_send_success">聚会发布成功</string>
    <string name="party_recruit_send_failed">聚会发布失败</string>
    <string name="party_cancel_send_success">聚会取消成功</string>
    <string name="party_cancel_send_failed">聚会取消失败</string>
    <string name="party_confirm_send_success">聚会启动成功</string>
    <string name="party_confirm_send_failed">聚会取消失败</string>
    <string name="party_finish_send_success">聚会结束成功</string>
    <string name="party_finish_send_failed">聚会结束失败</string>
    <string name="party_finish">该聚会已结束</string>
    <string name="live_limit">一个聚会同时只允许一个直播</string>
    <string name="live_start_send_success">直播发布成功</string>
    <string name="live_start_send_failed">直播发布失败</string>
    <string name="live_capture_send_success">封面更换成功</string>
    <string name="live_capture_send_failed">封面更换失败</string>
    <string name="live_stop_send_success">直播停止成功</string>
    <string name="live_stop_send_failed">直播停止失败</string>
    <string name="live_seize_start_send_success">抢播启动成功</string>
    <string name="live_seize_start_send_failed">抢播启动失败</string>
    <string name="live_seize_stop_send_success">抢播结束成功</string>
    <string name="live_seize_stop_send_failed">抢播结束失败</string>
    <string name="live_enter">进来围观</string>
    <string name="live_exit">暂时离开</string>
    <string name="left_time">剩余时间：</string>
    <string name="click_hint">猛戳屏幕\n争夺续播权</string>
    <string name="live_seize">续播</string>
    <string name="live_fb">美肤</string>
    <string name="live_capture">截图封面</string>
    <string name="live_sound">声音</string>
    <string name="live_light">照明</string>
    <string name="join_group_send_success">加入群聊成功</string>
    <string name="join_group_send_failed">加入群聊失败</string>
    <string name="qr_code_error">二维码信息错误</string>
    <string name="qr_desc">请将二维码置于取景框内，即可自动扫描</string>
    <string name="join_in_group">加入该群聊</string>
    <string name="notfound_audio_file">该语音文件已丢失</string>
    <string name="audio_in_call">已经为您切换到听筒模式</string>
    <string name="audio_in_speeker">已经为您切换到扬声器模式</string>
    <string name="imageview_content_description"></string>
    <string name="choose_city">选择城市</string>
    <string name="current_city">当前城市：</string>
    <string name="locate_city">定位城市：</string>
    <string name="city">城市</string>
    <string name="location">位置</string>
    <string name="un_location">定位失败</string>
    <string name="weixin">微信好友</string>
    <string name="pyq">朋友圈</string>
    <string name="weibo">新浪微博</string>
    <string name="copy_url">复制链接</string>
    <string name="phone_call">打电话</string>
    <string name="send_sms">发短信</string>
</resources>