<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:orientation="horizontal"
        android:background="@color/black_translucent">
        <TextView
            android:id="@+id/txt_seize"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:drawablePadding="5dp"
            android:layout_weight="1"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:gravity="center"
            android:text="@string/live_seize"
            android:layout_marginTop="20dp"
            android:drawableTop="@mipmap/live_seize"/>
        <TextView
            android:id="@+id/txt_fb_switch"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:drawablePadding="5dp"
            android:layout_weight="1"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:gravity="center"
            android:text="@string/live_fb"
            android:layout_marginTop="20dp"
            android:drawableTop="@mipmap/fb_off"/>
        <TextView
            android:id="@+id/txt_light"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:drawablePadding="5dp"
            android:layout_weight="1"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:gravity="center"
            android:text="@string/live_light"
            android:layout_marginTop="20dp"
            android:drawableTop="@mipmap/light_off"/>
        <TextView
            android:id="@+id/txt_capture"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:drawablePadding="5dp"
            android:layout_weight="1"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:gravity="center"
            android:text="@string/live_capture"
            android:layout_marginTop="20dp"
            android:drawableTop="@mipmap/capture"/>
        <TextView
            android:id="@+id/txt_mute"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:drawablePadding="5dp"
            android:layout_weight="1"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:gravity="center"
            android:text="@string/live_sound"
            android:layout_marginTop="20dp"
            android:drawableTop="@mipmap/mute_off"/>
    </LinearLayout>
    <TextView
        android:id="@+id/txt_cancel"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:text="@string/cancel"
        android:background="@color/black_translucent"/>
</LinearLayout>