<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:orientation="horizontal"
        android:background="@color/black_translucent">
        <TextView
            android:id="@+id/txt_weixin"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:drawablePadding="5dp"
            android:layout_weight="1"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:gravity="center"
            android:text="@string/weixin"
            android:layout_marginTop="20dp"
            android:drawableTop="@mipmap/weixin"/>
        <TextView
            android:id="@+id/txt_pyq"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:drawablePadding="5dp"
            android:layout_weight="1"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:gravity="center"
            android:text="@string/pyq"
            android:layout_marginTop="20dp"
            android:drawableTop="@mipmap/pyq"/>
        <TextView
            android:id="@+id/txt_weibo"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:drawablePadding="5dp"
            android:layout_weight="1"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:gravity="center"
            android:text="@string/weibo"
            android:layout_marginTop="20dp"
            android:drawableTop="@mipmap/weibo"/>
        <TextView
            android:id="@+id/txt_copy"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:drawablePadding="5dp"
            android:layout_weight="1"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:gravity="center"
            android:text="@string/copy_url"
            android:layout_marginTop="20dp"
            android:drawableTop="@mipmap/copy"/>
    </LinearLayout>
    <TextView
        android:id="@+id/txt_cancel"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:text="@string/cancel"
        android:background="@color/black_translucent"/>
</LinearLayout>