<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="48.0dip"
    android:id="@+id/topbar"
    android:background="@color/blue" >

    <TextView
        android:id="@+id/txt_left"
        style="@style/txt_titleStyle1"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:textSize="15sp"
        android:layout_toRightOf="@+id/img_back"
        android:layout_marginLeft="-10dp"
        android:text="@string/top_left_back"
        android:visibility="gone"/>

    <ImageView
        android:id="@+id/img_back"
        android:layout_width="40dp"
        android:layout_height="22dp"
        android:layout_centerVertical="true"
        android:visibility="gone"
        android:contentDescription="@string/app_name"
        android:src="@mipmap/icon_back" />

    <TextView
        android:id="@+id/txt_title"
        style="@style/txt_titleStyle1"
        android:text="@string/app_name"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="80dp"
        android:singleLine="true"
        android:layout_centerInParent="true"  />

    <ImageView
        android:id="@+id/img_right"
        android:layout_width="40dp"
        android:layout_height="30dp"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginRight="5dp"
        android:visibility="visible"
        android:contentDescription="@string/app_name"
        android:src="@mipmap/icon_add" />

    <TextView
        android:id="@+id/txt_right"
        style="@style/txt_titleStyle1"
        android:visibility="gone"
        android:text="@string/save"
        android:textSize="16sp"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginRight="10dp"  />

</RelativeLayout>