<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:orientation="horizontal"
        android:background="@color/black_translucent">
        <TextView
            android:id="@+id/txt_call"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:drawablePadding="5dp"
            android:layout_weight="1"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:gravity="center"
            android:text="@string/phone_call"
            android:layout_marginTop="20dp"
            android:drawableTop="@mipmap/phone_call"/>
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_head"
            android:layout_marginTop="10dp"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:src="@mipmap/head"/>
        <TextView
            android:id="@+id/txt_sms"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:drawablePadding="5dp"
            android:layout_weight="1"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:gravity="center"
            android:text="@string/send_sms"
            android:layout_marginTop="20dp"
            android:drawableTop="@mipmap/sms"/>
    </LinearLayout>
    <TextView
        android:id="@+id/txt_cancel"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center"
        android:textColor="@color/gray"
        android:textSize="18sp"
        android:text="@string/cancel"
        android:background="@color/black_translucent"/>
</LinearLayout>