<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical" >

    <include
        android:id="@+id/top_bar"
        layout="@layout/layout_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="12dp" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="64dp" >

            <ImageView
                android:id="@+id/img_photo"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_alignParentRight="true"
                android:src="@mipmap/icon_register" />

            <EditText
                android:id="@+id/et_usernick"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_alignParentBottom="true"
                android:layout_marginRight="10dp"
                android:layout_toLeftOf="@id/img_photo"
                android:background="@drawable/edittext_login"
                android:gravity="center_vertical"
                android:hint="例如：刘能"
                android:paddingLeft="90dp"
                android:singleLine="true"
                android:textColorHint="#DDDDDD"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_usernick"
                android:layout_width="90dp"
                android:layout_height="48dp"
                android:layout_alignLeft="@id/et_usernick"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="10dp"
                android:gravity="center_vertical"
                android:text="@string/tv_usernick"
                android:textColor="#353535"
                android:textSize="16sp" />
        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="48dp" >

            <EditText
                android:id="@+id/et_usertel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:background="@drawable/edittext_login"
                android:hint="@string/et_usertel"
                android:inputType="phone"
                android:paddingLeft="90dp"
                android:singleLine="true"
                android:textColorHint="#DDDDDD"
                android:textSize="16sp" />

            <TextView
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/et_usertel"
                android:layout_centerVertical="true"
                android:layout_marginLeft="24dp"
                android:text="+86"
                android:textColor="#353535"
                android:textSize="16sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="48dp" >

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:background="@drawable/edittext_login"
                android:hint="@string/et_password"
                android:paddingLeft="90dp"
                android:password="true"
                android:singleLine="true"
                android:textColorHint="#DDDDDD"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txt_password"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/et_password"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:text="@string/tv_password"
                android:textColor="#353535"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="44dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/img_hide"
                    android:layout_width="44dp"
                    android:layout_height="44dp"
                    android:padding="10dp"
                    android:src="@mipmap/agt" />

                <ImageView
                    android:id="@+id/img_show"
                    android:layout_width="44dp"
                    android:layout_height="44dp"
                    android:padding="10dp"
                    android:src="@mipmap/agu"
                    android:visibility="gone" />
            </LinearLayout>
        </RelativeLayout>

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@drawable/btn_register_bg"
            android:enabled="false"
            android:paddingBottom="7dp"
            android:paddingTop="7dp"
            android:text="@string/btn_register"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_xieyi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="14sp" />
    </LinearLayout>

</LinearLayout>